# girlmath

./: .gitignore  CODEOWNERS  Cargo.toml  Justfile  Makefile  README.md
.github/: integrity-check.yml
bindings/girlmath-js/: .gitignore  .mocharc.json  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  web-test-runner.config.mjs
bindings/girlmath-js/examples/: example.js  index.html
bindings/girlmath-js/examples/node-esm/: node-esm.mjs  package.json
bindings/girlmath-js/scripts/: build.sh  bundle.js  epilogue.js  package.json
bindings/girlmath-js/src/: lib.rs
bindings/girlmath-js/src/exchange/: mod.rs
bindings/girlmath-js/src/format/: mod.rs
bindings/girlmath-js/src/subunits/: mod.rs
bindings/girlmath-js/tests/: bundle-tests.js  exchange.spec.ts  format.spec.ts  girlmath.test.js  subunits.spec.ts
bindings/girlmath-js/tests/compiled/: girlmath.test.js  girlmath.test.js.map
crates/girlmath/: Cargo.toml  Justfile  Makefile
crates/girlmath/src/: lib.rs
src/: exchange.rs  format.rs  lib.rs  main.rs  subunits.rs
