[package]
name = "girlmath-js"
version = "0.1.0"
edition = "2021"
description = "Currency conversion"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
girlmath = { path = "../.." }
js-sys = "0.3"
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true