[package]
name = "girlmath"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tbd54566975/girlmath"
rust-version = "1.72.1"
description.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
rusty-money = { version = "0.4.0", features = ["iso", "crypto"] }
rust_decimal = "1.32.0"
